--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.28.1
-pandas==2.1.3
-plotly==5.17.0
-boto3==1.34.0
-python-dotenv==1.0.0
-altair==5.1.2
+streamlit>=1.28.0
+pandas>=2.2.0
+plotly>=5.17.0
+boto3>=1.34.0
+python-dotenv>=1.0.0
